@@ -10,7 +10,7 @@ TIMESTAMP=$(date +"%Y-%m-%d_%H-%M")
 OUTPUT_DIR="$HOME/Output/$TIMESTAMP"
 mkdir -p $OUTPUT_DIR
 TASK="ExperimentosKDtreeMOA \
-    -o $OUTPUT_DIR/AgrawalServidorGCParallel2gHeap.csv \
+    -o $OUTPUT_DIR/AgrawalServidorGCSerial2gHeap.csv \
     "
 NUMA_NODE=0
 
@@ -39,6 +39,8 @@ echo ">> JAR: $JAR_FILE"
 echo ">> Iniciando experimentos..."
 
 # CONFIGURAÇÃO APLICADA DO NUMA E PARAMETROS DO JAVA
+### DICA
+##     -Xlog:gc* # Mostra o log do gc
 #### PARAMETROS USADOS NO NOTEBOOK
 # numactl --cpunodebind=$NUMA_NODE --membind=$NUMA_NODE \
 #     java \
@@ -47,14 +49,21 @@ echo ">> Iniciando experimentos..."
 #     moa.DoTask "$TASK"
 
 ### OPÇÃO 2
+# numactl --cpunodebind=$NUMA_NODE --membind=$NUMA_NODE \
+#     java \
+#     -XX:+UseParallelGC \
+#     -Xms2g \
+#     -Xmx2g \
+#     -cp "$JAR_FILE" \
+#     moa.DoTask "$TASK"
+
 numactl --cpunodebind=$NUMA_NODE --membind=$NUMA_NODE \
     java \
-    -XX:+UseParallelGC \
+    -XX:+UseSerialGC \
     -Xms2g \
     -Xmx2g \
     -cp "$JAR_FILE" \
     moa.DoTask "$TASK"
-
 
 ### OPÇÃO 3
 # numactl --cpunodebind=$NUMA_NODE --membind=$NUMA_NODE \
